--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -63,6 +63,12 @@ jobs:
           command: build
           args: --workspace
 
+      - name: Golemsp Test Suite (semi-integration tests)
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --tests -p golemsp --features golemsp/test-suite --locked
+
       - name: Copy binaries
         shell: bash
         run: |
