--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -34,6 +34,7 @@ structopt = "0.3"
 thiserror = "1.0"
 tokio = { version = "0.2", features = ["fs", "blocking"] }
 uuid = { version = "0.8", features = ["v4"] }
+rustc-hex = "2.1.0"
 
 [dev-dependencies]
 ya-service-api-derive = "0.1"
