--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,6 +151,8 @@ jobs:
           asset_content_type: ${{ steps.pack.outputs.providerMedia }}
 
   build-aarch64:
+    env:
+      RUSTFLAGS: "-C link-arg=-s"
     needs: create-release
     runs-on: ubuntu-latest
     steps:
@@ -173,15 +175,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build binaries
-        uses: docker://golemfactory/build-aarch64:0.1.1
+        uses: actions-rs/cargo@v1
         with:
-          workdir: /github/workspace
+          use-cross: true
+          command: build
           args: >
-            /bin/bash -c "
-              export HOME=/root &&
-              cargo build -p={yagna,ya-exe-unit,ya-provider,golemsp,gftp} --release --features static-openssl &&
-              aarch64-linux-musl-strip -x target/aarch64-unknown-linux-musl/release/{yagna,ya-provider,exe-unit,golemsp,gftp}
-            "
+            -p yagna
+            -p ya-exe-unit
+            -p ya-provider
+            -p golemsp
+            -p gftp
+            --release
+            --features static-openssl
+            --target aarch64-unknown-linux-musl
 
       - name: Pack
         id: pack
