--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,8 +171,16 @@ jobs:
             });
             console.log(release.data.upload_url);
             return release.data.upload_url
+
       - name: Check out repository
         uses: actions/checkout@v2
+
+      - name: Setup toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-unknown-linux-musl
+          override: true
 
       - name: Build binaries
         uses: actions-rs/cargo@v1
