--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,8 @@ structopt = "0.3"
 tokio = {version = "0.2.22", features=["uds"]}
 url = "2.1.1"
 serde="1.0.126"
+serde_json = "1.0.66"
+flexbuffers="0.2"
 
 [package.metadata.deb]
 name="golem-requestor"
