--- a/core/serv-api/Cargo.toml
+++ b/core/serv-api/Cargo.toml
@@ -5,6 +5,9 @@ description = "Interface for modules of Yagna service and CLI"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
+[features]
+with-awc = ['trust-dns-resolver', 'actix-connect', 'awc', 'awc/openssl', 'actix-http']
+
 [dependencies]
 anyhow = "1.0"
 lazy_static = "1.4"
@@ -14,3 +17,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
 url = "2.1.1"
+
+
+trust-dns-resolver={ version = "0.20.3", optional = true }
+actix-connect = { version = "2.0.0", optional = true }
+actix-http = { version = "2.2.1", optional = true }
+awc = { version = "2.0.3", features = ["openssl"], optional = true }
