--- a/core/payment-driver/base/Cargo.toml
+++ b/core/payment-driver/base/Cargo.toml
@@ -15,11 +15,8 @@ bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
-ethereum-types = "0.9"
-# Lock ethsign on this commit to match parity-crypto=0.6 from zksync_eth_client
-ethsign = { git = "https://github.com/tomusdrw/ethsign.git", rev = "1b93031d2c45f3a3313e5418876b3d3e751ba87e" }
-# TODO: Upgrade to latest = 0.8 after zksync_eth_client is updated
-# ethsign = "0.8"
+ethereum-types = "0.11"
+ethsign = "0.8"
 futures = "0.3"
 hex = "0.4"
 log = "0.4.8"
