--- a/core/payment-driver/erc20/Cargo.toml
+++ b/core/payment-driver/erc20/Cargo.toml
@@ -13,8 +13,8 @@ anyhow = "1.0"
 awc = { version = "2.0", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
-ethereum-tx-sign = "3.0"
-ethabi = "12.0"
+ethabi = "14.1"
+ethereum-types = "0.11"
 futures = "0.3"
 hex = "0.4"
 lazy_static = "1.4"
@@ -22,14 +22,14 @@ log = "0.4.8"
 maplit = "1.0"
 num-bigint = { version = "0.3", features = ["serde"] }
 num-traits = "0.2"
-rlp = "0.4"
+rlp = "0.5"
 serde = "1.0"
 serde_json = "^1.0"
 sha3 = "0.8"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 tokio = { version = "0.2", features = ["full"] }
 uuid = { version = "0.8", features = ["v4"] }
-web3 = "0.13"
+web3 = "0.15"
 
 ## yagna dependencies
 ya-payment-driver = "0.2"
