--- a/core/payment-driver/zksync/Cargo.toml
+++ b/core/payment-driver/zksync/Cargo.toml
@@ -20,14 +20,16 @@ log = "0.4.8"
 maplit = "1.0"
 metrics-macros = "=0.1.0-alpha.5"
 num-bigint = { version = "0.3", features = ["serde"] }
-rlp = "0.4"
+rlp = "0.5"
 serde = "1.0"
 serde_json = "^1.0"
 tiny-keccak = "1.4.2"
 tokio = { version = "0.2", features = ["full"] }
 uuid = { version = "0.8", features = ["v4"] }
-zksync = { git = "https://github.com/matter-labs/zksync", rev = "c9858084e20d722cbec9792539a6f55117caeb75"}
-zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", rev = "c9858084e20d722cbec9792539a6f55117caeb75"}
+#zksync = { path="/home/reqc/fixfix/zksync/sdk/zksync-rs" }
+#zksync_eth_signer = { path="/home/reqc/fixfix/zksync/core/lib/eth_signer"}
+zksync = { git = "https://github.com/matter-labs/zksync", rev = "f59e154865374bdc0f5ded2e2604dac599cb75ee"}
+zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", rev = "f59e154865374bdc0f5ded2e2604dac599cb75ee"}
 
 ## yagna dependencies
 ya-payment-driver = "0.2"
