--- a/goth_tests/domain/ya-provider/goth-config.yml
+++ b/goth_tests/domain/ya-provider/goth-config.yml
@@ -21,7 +21,7 @@ docker-compose:
 
   compose-log-patterns:
     ethereum: ".*Wallets supplied."
-    zksync: ".*Running on http://0.0.0.0:3030/.*"
+    zksync: ".*Running on.*"
 
 
 key-dir: "../../assets/keys"
