--- a/.github/workflows/nightly-goth.yml
+++ b/.github/workflows/nightly-goth.yml
@@ -50,6 +50,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ matrix.branch }}
 
       - name: Configure Python
         uses: actions/setup-python@v2
