Started work on matic payment driver. Added goerli test network to ERC20.

--- a/.env-template
+++ b/.env-template
@@ -40,6 +40,7 @@ YAGNA_DATADIR="."
 ## All drivers
 #RINKEBY_GETH_ADDR=http://1.geth.testnet.golem.network:55555
 #MAINNET_GETH_ADDR=https://geth.golem.network:55555
+#GOERLI_GETH_ADDR=https://rpc.goerli.mudit.blog/
 
 ## ERC20 driver.
 #ETH_FAUCET_ADDRESS=http://faucet.testnet.golem.network:4000/donate
