Changing names from ERC20 to Polygon

--- a/core/payment-driver/polygon/Cargo.toml
+++ b/core/payment-driver/polygon/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ya-erc20-driver"
+name = "ya-polygon-driver"
 version = "0.3.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
