--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -49,6 +49,7 @@ humantime="2.0.1"
 ya-client = "0.5"
 ya-dummy-driver = "0.2"
 ya-erc20-driver = "0.3"
+ya-polygon-driver = "0.3"
 ya-zksync-driver = "0.2"
 ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
