--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ license = "GPL-3.0"
 edition = "2018"
 
 [features]
-default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
+default = ['erc20-driver', 'zksync-driver', 'polygon-driver', 'gftp/bin']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
+polygon-driver = ['ya-polygon-driver']
 zksync-driver = ['ya-zksync-driver']
 tos = []
 
@@ -28,6 +29,7 @@ ya-core-model = { version = "^0.4"}
 ya-dummy-driver = { version = "0.2", optional = true }
 ya-file-logging = "0.1"
 ya-erc20-driver = { version = "0.3", optional = true }
+ya-polygon-driver = { version = "0.3", optional = true }
 ya-zksync-driver = { version = "0.2", optional = true }
 ya-identity = "0.2"
 ya-market = "0.3"
@@ -119,6 +121,7 @@ members = [
     "core/payment-driver/dummy",
     "core/payment-driver/erc20",
     "core/payment-driver/zksync",
+    "core/payment-driver/polygon",
     "core/persistence",
     "core/serv-api",
     "core/serv-api/cache",
@@ -159,6 +162,7 @@ ya-payment-driver = { path = "core/payment-driver/base" }
 ya-dummy-driver = { path = "core/payment-driver/dummy" }
 ya-erc20-driver = { path = "core/payment-driver/erc20" }
 ya-zksync-driver = { path = "core/payment-driver/zksync" }
+ya-polygon-driver = { path = "core/payment-driver/polygon" }
 ya-version = { path = "core/version" }
 ya-vpn = { path = "core/vpn" }
 
