--- a/goth_tests/domain/exe_units/goth-config.yml
+++ b/goth_tests/domain/exe_units/goth-config.yml
@@ -21,7 +21,7 @@ docker-compose:
 
   compose-log-patterns:
     ethereum: ".*Wallets supplied."
-    zksync: ".*Running on http://0.0.0.0:3030/.*"
+    zksync: ".*Running on http://.*:3030/.*"
 
 
 key-dir: "../../assets/keys"
@@ -40,7 +40,7 @@ node-types:
   - name: "Provider"
     class: "goth_tests.helpers.probe.ProviderProbe"
     mount:
-      - read-only: "../../assets/provider/presets.json"
+      - read-only: "../../provider-presets.json"
         destination: "/root/.local/share/ya-provider/presets.json"
       - read-only: "../../assets/provider/hardware.json"
         destination: "/root/.local/share/ya-provider/hardware.json"
