Re-Added flag --tests to run tests

--- a/.github/workflows/rust-market-test-suit.yml
+++ b/.github/workflows/rust-market-test-suit.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --features ya-market/test-suite --locked
+          args: --tests --features ya-market/test-suite --locked
 
       - name: Build binaries
         uses: actions-rs/cargo@v1
