--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -20,7 +20,7 @@ readme = "README.md"
 python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.14"
-goth = { git = "https://github.com/golemfactory/goth.git", branch = "mf/test-counters" }
+goth = "^0.6.5"
 # to use development goth version uncomment below
 # goth = { git = "https://github.com/golemfactory/goth.git", branch = "your-branch-here" }
 
