--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Create release
 on:
   push:
     tags:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   create-release:
-    name: "Create Release"
+    name: Create release
     runs-on: ubuntu-latest
     steps:
       - name: Create Release
