--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 
 [features]
 default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
-hybrid = ['ya-net/hybrid']
+hybrid-net = ['ya-net/hybrid']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
