flow implementation (WIP)

--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = []
 service = []
-hybrid-net = ["ya-net-server", "ya-relay-proto", "ya-sb-proto", "bytes", "ethsign", "tokio-util", "url", "prost"]
+hybrid-net = ["ya-net-server", "ya-relay-proto", "ya-sb-proto", "bytes", "ethsign", "tokio-util", "url", "prost", "rand"]
 
 [dependencies]
 ya-core-model = { version = "^0.4", features=["net", "identity"] }
@@ -34,6 +34,7 @@ ethsign = { version = "0.8", optional = true }
 tokio-util = { version = "0.3", optional = true }
 url = { version = "2.2", optional = true }
 prost = { version = "0.6", optional = true }
+rand = { version = "0.7", optional = true}
 
 [dev-dependencies]
 ya-sb-proto = "0.4"
