Trigger CI build manually

--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
       - release/*
+      - km/polygon-default
   pull_request:
     branches:
       - master
       - release/*
+      - km/polygon-default
 
 jobs:
   build:
