Update integration test to run hybrid net goth

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - release/*
+      - mwu/build-hybrid-for-goth
   pull_request:
     branches:
       - master
