--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,7 +22,8 @@ pytest = "^6.2"
 pytest-asyncio = "^0.14"
 # goth = "^0.7"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", branch = "fix-flaky-tests-wait_for_proposals" }
+# goth = { git = "https://github.com/golemfactory/goth.git", branch = "fix-flaky-tests-wait_for_proposals" }
+goth = { git = "https://github.com/golemfactory/goth.git", rev = "b5b4ad3c4156899781888f12c9e614ad7f734af9" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
