Hybrid Net configurable values added

--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -22,6 +22,7 @@ ya-utils-networking = "0.1"
 actix-rt = "1.0"
 anyhow = "1.0"
 futures = "0.3"
+humantime = "2.1"
 lazy_static = "1.4"
 log = "0.4"
 metrics="0.12"
