--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -23,7 +23,7 @@ pytest-asyncio = "^0.14"
 # goth = "^0.7"
 # to use development goth version uncomment below
 # goth = { git = "https://github.com/golemfactory/goth.git", branch = "fix-flaky-tests-wait_for_proposals" }
-goth = { git = "https://github.com/golemfactory/goth.git", branch = "mwu/proposal-timeout" }
+goth = { git = "https://github.com/golemfactory/goth.git", branch = "master" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
