--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,8 +22,8 @@ pytest = "^6.2"
 pytest-asyncio = "^0.14"
 # goth = "^0.7"
 # to use development goth version uncomment below
-# goth = { git = "https://github.com/golemfactory/goth.git", branch = "fix-flaky-tests-wait_for_proposals" }
-goth = { git = "https://github.com/golemfactory/goth.git", branch = "master" }
+# goth = { git = "https://github.com/golemfactory/goth.git", branch = "your-branch-here" }
+goth = { git = "https://github.com/golemfactory/goth.git", rev = "7882c57cdba8db5715d081f447aced1ce12a0412" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
