--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = ["dns"]
 dns = ["anyhow",  "url", "trust-dns-resolver/mdns"]
-vpn = ["ipnet", "thiserror"]
+vpn = ["ya-net-stack", "ipnet", "thiserror"]
 
 [dependencies]
 futures = "0.3"
@@ -17,5 +17,6 @@ anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.19", optional = true }
 url = { version = "2.2", optional = true }
 
+ya-net-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1a213f4185ad9f4f0f1caf0eea6ccc163619685b", optional = true }
 ipnet = { version = "2.3", optional = true }
-thiserror ={ version = "1.0", optional = true }
+thiserror = { version = "1.0", optional = true }
