--- a/utils/agreement-utils/Cargo.toml
+++ b/utils/agreement-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ya-agreement-utils"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 homepage = "https://github.com/golemfactory/yagna"
@@ -9,14 +9,36 @@ license = "LGPL-3.0"
 description="Yagna agreement utils"
 keywords=["golem", "yagna"]
 
+[features]
+default = []
+manifest = [
+    "anyhow", "base64", "chrono", "ethsign", "hex", "semver", "sha2",
+    "snailquote", "strum", "strum_macros", "structopt", "url"
+]
+
 [dependencies]
 ya-client-model = "0.3"
 
+regex = "1.5.4"
 serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8.11"
 thiserror = "1.0.10"
 
+anyhow = { version = "1.0", optional = true }
+base64 = { version = "0.13", optional = true }
+chrono = { version = "0.4", features = ["serde"], optional = true }
+ethsign = { version = "0.8.0", optional = true }
+hex = { version = "0.4", optional = true }
+semver = { version = "1.0", features = ["serde"], optional = true }
+sha2 = { version = "0.9", optional = true }
+snailquote = { version = "0.3", optional = true }
+structopt = { version =  "0.3", optional = true }
+strum = {version = "0.22", optional = true }
+strum_macros = {version = "0.22", optional = true }
+url = {version = "2.2", features = ["serde"], optional = true }
+
 [dev-dependencies]
 anyhow = "1.0.31"
 tempdir = "0.3.7"
+shlex = "1.1.0"
