--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -13,7 +13,7 @@ name = "ya-provider"
 path = "src/main.rs"
 
 [dependencies]
-ya-agreement-utils = { version = "^0.2"}
+ya-agreement-utils = { version = "^0.2", features = ["manifest"] }
 ya-client = { version = "0.5", features = ['cli'] }
 ya-client-model = "0.3"
 ya-compile-time-utils = "0.2"
@@ -31,7 +31,7 @@ anyhow = "1.0"
 backoff = "0.2.1"
 bigdecimal = "0.2"
 bytesize = "1.0.1"
-chrono = "0.4.10"
+chrono = { version = "0.4.10", features = ["serde"] }
 derive_more = "0.99.5"
 dialoguer = "0.5.0"
 directories = "2.0.2"
@@ -45,7 +45,9 @@ log = "0.4.8"
 log-derive = "0.4"
 notify = "4.0.15"
 num_cpus = "1.13.0"
+num-traits = "0.2.14"
 path-clean = "0.1.0"
+regex = "1.5"
 semver = { version = "0.11", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -68,4 +70,4 @@ nix = "0.22.0"
 winapi = { version = "0.3.8", features = ["fileapi"] }
 
 [dev-dependencies]
-chrono = "0.4"
+shlex = "1.1.0"
