--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -50,7 +50,7 @@ semver = { version = "0.11", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shared_child = "0.3.4"
-signal-hook = "0.1.13"
+signal-hook-tokio = "0.3"
 structopt = "0.3.20"
 strum = "0.20"
 strum_macros = "0.20"
