--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -38,6 +38,7 @@ directories = "2.0.2"
 dotenv = "0.15.0"
 futures = "0.3"
 futures-util = "0.3.4"
+hex = "0.4"
 humantime = "2.0.0"
 lazy_static = "1.4.0"
 libc = "0.2"
