--- a/utils/agreement-utils/Cargo.toml
+++ b/utils/agreement-utils/Cargo.toml
@@ -12,8 +12,8 @@ keywords=["golem", "yagna"]
 [features]
 default = []
 manifest = [
-    "anyhow", "base64", "chrono", "ethsign", "hex", "semver", "sha2",
-    "snailquote", "strum", "strum_macros", "structopt", "url"
+    "anyhow", "base64", "chrono", "ethsign", "hex", "petname", "semver",
+    "sha2", "snailquote", "strum", "strum_macros", "structopt", "url"
 ]
 
 [dependencies]
@@ -30,6 +30,7 @@ base64 = { version = "0.13", optional = true }
 chrono = { version = "0.4", features = ["serde"], optional = true }
 ethsign = { version = "0.8.0", optional = true }
 hex = { version = "0.4", optional = true }
+petname = { version = "1.1.2", optional = true }
 semver = { version = "1.0", features = ["serde"], optional = true }
 sha2 = { version = "0.9", optional = true }
 snailquote = { version = "0.3", optional = true }
