--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 [features]
 default = []
 service = []
-#hybrid-net = ["ya-relay-client", "ya-relay-proto", "ya-sb-proto", "bytes", "ethsign", "tokio-util", "url", "prost", "rand"]
+# Temporary to make goth integration tests work
+hybrid-net = []
 
 [dependencies]
 ya-core-model = { version = "^0.4", features=["net", "identity"] }
