--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ edition = "2018"
 
 [features]
 default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
-hybrid-net = ['ya-net/hybrid-net']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
 zksync-driver = ['ya-zksync-driver']
 tos = []
+# Temporary to make goth integration tests work
+hybrid-net = ['ya-net/hybrid-net']
 
 [[bin]]
 name = "yagna"
