--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2018"
 [features]
 default = []
 service = []
-hybrid-net = ["ya-relay-client", "ya-relay-proto", "ya-sb-proto", "bytes", "ethsign", "tokio-util", "url", "prost", "rand"]
+# Temporary to make goth integration tests work
+hybrid-net = []
 
 [dependencies]
 ya-core-model = { version = "^0.4", features=["net", "identity"] }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45", optional = true }
-ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45", features = ["codec"], optional = true }
-ya-sb-proto = { version = "0.4", optional = true }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45" }
+ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45", features = ["codec"] }
+ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
@@ -22,19 +23,22 @@ ya-utils-networking = "0.1"
 actix-rt = "1.0"
 anyhow = "1.0"
 futures = "0.3"
+humantime = "2.1"
 lazy_static = "1.4"
 log = "0.4"
 metrics="0.12"
 serde_json = "1.0"
+structopt = "0.3"
+strum = { version = "0.22", features = ["derive"] }
 thiserror = "1.0"
 tokio = { version = "0.2", features = ["time"] }
 
-bytes = { version = "0.5", optional = true }
-ethsign = { version = "0.8", optional = true }
-tokio-util = { version = "0.3", optional = true }
-url = { version = "2.2", optional = true }
-prost = { version = "0.6", optional = true }
-rand = { version = "0.7", optional = true}
+bytes = { version = "0.5" }
+ethsign = { version = "0.8" }
+tokio-util = { version = "0.3" }
+url = { version = "2.2" }
+prost = { version = "0.6" }
+rand = { version = "0.7"}
 
 [dev-dependencies]
 ya-sb-proto = "0.4"
