erc20 driver in goth

--- a/goth_tests/domain/ya-provider/goth-config.yml
+++ b/goth_tests/domain/ya-provider/goth-config.yml
@@ -56,6 +56,7 @@ nodes:
 
   - name: "requestor"
     type: "Requestor"
+    payment-config: "erc20"
 
   - name: "provider-1"
     type: "Wasm-Provider"
