--- a/core/misc/Cargo.toml
+++ b/core/misc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ya-miscellaneous"
+name = "ya-misc"
 version = "0.1.0"
 description = "Other stuff info"
 authors = ["Golem Factory <contact@golem.network>"]
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 ya-client = "0.5"
 ya-compile-time-utils = "0.2"
-ya-core-model = { version = "^0.4", features = ["version"] }
+ya-core-model = { version = "^0.4", features = ["misc"] }
 ya-persistence = "0.2"
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
