--- a/golem_cli/Cargo.toml
+++ b/golem_cli/Cargo.toml
@@ -35,6 +35,7 @@ serde_json = "1.0"
 strip-ansi-escapes = "0.1"
 structopt = "0.3"
 strum = "0.20.0"
+strum_macros = "0.20.0"
 tokio = { version = "0.2", features = ["process", "rt-core", "signal", "time", "io-util", "io-std"] }
 url = "2.1"
 
