Working p2p communication between Nodes

--- a/.env-template
+++ b/.env-template
@@ -23,9 +23,6 @@ YAGNA_DATADIR="."
 #YAGNA_ACTIVITY_URL=http://127.0.0.1:7465/activity-api/v1/
 #YAGNA_PAYMENT_URL=http://127.0.0.1:7465/payment-api/v1/
 
-# Central Net Mk1 hub.
-#CENTRAL_NET_HOST=3.249.139.167:7464
-
 # Decentralized Market
 # Grace time (in days) for cleaning up agreements in DB
 #YAGNA_MARKET_AGREEMENT_STORE_DAYS=90
@@ -100,3 +97,19 @@ NODE_NAME=__YOUR_NODE_NAME_GOES_HERE__
 
 # Yagna service REST API application key token.
 YAGNA_APPKEY=__GENERATED_APP_KEY__
+
+# Choose NET type to use. Central NET is used by default, but will be removed
+# in future version to use more decentralized solutions.
+#YA_NET_TYPE=hybrid
+YA_NET_TYPE=central
+
+## Central Net configuration.
+#CENTRAL_NET_HOST=3.249.139.167:7464
+
+## Hybrid NET configuration
+
+# ya-net p2p client will listen on this address.
+YA_NET_BIND_URL=udp://0.0.0.0:11500
+
+# Address of relay server.
+YA_NET_RELAY_HOST=127.0.0.1:7464
