--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -12,11 +12,9 @@ hybrid-net = []
 
 [dependencies]
 ya-core-model = { version = "^0.4", features=["net", "identity"] }
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45" }
-#ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "1052108b786c75c996f9c6db8bc52d8ddab04c45", features = ["codec"] }
-ya-relay-client = { path = "../../../ya-relay/client" }
-ya-relay-core = { path = "../../../ya-relay/crates/core" }
-ya-relay-proto = { path = "../../../ya-relay/crates/proto", features = ["codec"] }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "591963ee53a75696bf22218f6a93de51240f5a8c" }
+ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "591963ee53a75696bf22218f6a93de51240f5a8c" }
+ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "591963ee53a75696bf22218f6a93de51240f5a8c", features = ["codec"] }
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
