--- a/goth_tests/domain/exe_units/goth-config.yml
+++ b/goth_tests/domain/exe_units/goth-config.yml
@@ -48,7 +48,7 @@ node-types:
     environment:
       - "IDLE_AGREEMENT_TIMEOUT=5s"
       - "DEBIT_NOTE_ACCEPTANCE_DEADLINE=8s"
-      - "DEBIT_NOTE_INTERVAL=1"
+      - "DEBIT_NOTE_INTERVAL=1s"
 
 nodes:
 
