--- a/goth_tests/domain/ya-provider/goth-config.yml
+++ b/goth_tests/domain/ya-provider/goth-config.yml
@@ -50,7 +50,7 @@ node-types:
     environment:
       - "IDLE_AGREEMENT_TIMEOUT=5s"
       - "DEBIT_NOTE_ACCEPTANCE_DEADLINE=8s"
-      - "DEBIT_NOTE_INTERVAL=6"
+      - "DEBIT_NOTE_INTERVAL=6s"
 
 nodes:
 
