--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,14 @@ license = "GPL-3.0"
 edition = "2018"
 
 [features]
-default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
+default = ['erc20-driver', 'gftp/bin']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
-zksync-driver = ['ya-zksync-driver']
+#zksync-driver = ['ya-zksync-driver']
 tos = []
 # Temporary to make goth integration tests work
-hybrid-net = ['ya-net/hybrid-net']
+#hybrid-net = ['ya-net/hybrid-net']
 
 [[bin]]
 name = "yagna"
@@ -30,7 +30,7 @@ ya-core-model = { version = "^0.5"}
 ya-dummy-driver = { version = "0.2", optional = true }
 ya-file-logging = "0.1"
 ya-erc20-driver = { version = "0.3", optional = true }
-ya-zksync-driver = { version = "0.2", optional = true }
+#ya-zksync-driver = { version = "0.2", optional = true }
 ya-identity = "0.2"
 ya-market = "0.3"
 ya-metrics = "0.1"
