Add missing docker-file to all goth-config.yml

--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -5,6 +5,8 @@
 
 docker-compose:
 
+  # Path to compose file to be used, relative to `docker-dir`
+  compose-file: "docker-compose.yml"
   docker-dir: "assets/docker/"
 
   build-environment:
