--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -60,7 +60,7 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.11"
 sha3 = "0.8.2"
-signal-hook = { version = "0.1.13", features = ["tokio-support"] }
+signal-hook = "0.3" 
 structopt = "0.3"
 thiserror = "1.0.10"
 tokio = { version = "0.2.11", features = ["process", "signal", "time"] }
