Removed udeps reported items, updated as many dependencies as possible

--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -36,15 +36,13 @@ chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99.5"
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
 diesel_migrations = "1.4"
-digest = "0.8.1"
-env_logger = { version = "0.7" }
+env_logger = "0.8"
 futures = "0.3"
 humantime = "2.0.0"
 lazy_static = "1.4"
 libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
 log = "0.4"
 metrics="0.12"
-num-derive = "0.3"
 num-traits = "0.2"
 r2d2 = "0.8"
 rand = "0.7.2"
