--- a/core/gftp/Cargo.toml
+++ b/core/gftp/Cargo.toml
@@ -24,9 +24,8 @@ ya-service-bus = "0.4"
 
 actix-rt = "1.0"
 anyhow = "1.0"
-digest = "0.8.1"
 dotenv = { version = "0.15.0", optional = true }
-env_logger = { version = "0.7.1", optional = true }
+env_logger = { version = "0.8", optional = true }
 futures = "0.3"
 log = "0.4.8"
 rand = "0.7.3"
@@ -40,7 +39,7 @@ url = { version = "2.1.1", features = ["serde"] }
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
-env_logger = { version = "0.7.1" }
+env_logger = "0.8"
 sha3 = "0.8.2"
 tempdir = "0.3.7"
 tokio = { version = "0.2", features = ["process"] }
