--- a/exe-unit/runtime-api/Cargo.toml
+++ b/exe-unit/runtime-api/Cargo.toml
@@ -24,18 +24,18 @@ server = [
 
 [dependencies]
 anyhow = "1.0.31"
-bytes = "0.5"
+bytes = "1.1.0"
 futures = { version = "0.3", optional = true  }
 log = "0.4.8"
-prost = { version = "0.6.1", optional = true }
+prost = { version = "0.9.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "0.2" , optional = true, features=["io-std", "rt-core", "rt-util", "process", "sync"] }
-tokio-util = { version = "0.3", optional = true, features = ["codec"] }
+tokio = { version = "1.17.0" , optional = true, features=["io-std", "rt", "rt", "process", "sync"] }
+tokio-util = { version = "0.7.0", optional = true, features = ["codec"] }
 
 [build-dependencies]
-prost-build = "0.6.1"
+prost-build = "0.9.0"
 
 [dev-dependencies]
-tokio = { version = "0.2" , features=["io-std", "rt-core", "macros", "rt-threaded", "time"] }
+tokio = { version = "1.17.0" , features=["io-std", "macros", "rt", "time"] }
 env_logger = "0.7"
