--- a/core/gftp/Cargo.toml
+++ b/core/gftp/Cargo.toml
@@ -20,9 +20,9 @@ required-features=['bin']
 [dependencies]
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.5", features = ["gftp", "identity", "net"] }
-ya-service-bus = "0.4"
+ya-service-bus ={ git = "https://github.com/golemfactory/ya-service-bus", branch = "sz/update_libs"}
 
-actix-rt = "1.0"
+actix-rt = "2.7.0"
 anyhow = "1.0"
 digest = "0.8.1"
 dotenv = { version = "0.15.0", optional = true }
@@ -35,7 +35,7 @@ serde_json = "1.0"
 sha3 = "0.8.2"
 structopt = "0.3.9"
 thiserror = "1.0.20"
-tokio = { version = "0.2", features = ["io-std", "time"] }
+tokio = { version = "1.17.0", features = ["io-std", "time"] }
 url = { version = "2.1.1", features = ["serde"] }
 
 [dev-dependencies]
@@ -43,6 +43,6 @@ dotenv = { version = "0.15.0" }
 env_logger = { version = "0.7.1" }
 sha3 = "0.8.2"
 tempdir = "0.3.7"
-tokio = { version = "0.2", features = ["process"] }
+tokio = { version = "1.17.0", features = ["process"] }
 
 [build-dependencies]
