--- a/.github/workflows/integration-test-hybrid-net.yml
+++ b/.github/workflows/integration-test-hybrid-net.yml
@@ -1,4 +1,4 @@
-name: Goth integration tests hybrid-net
+name: Goth integration tests (hybrid-net)
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
         run: echo job status= ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
 
   integration-test:
-    name: Integration Tests
+    name: Integration Tests (hybrid-net)
     runs-on: goth
     needs: test_check
     defaults:
