--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -11,7 +11,7 @@ default = []
 ya-agreement-utils = { version = "^0.2"}
 ya-client-model = { version = "0.3", features = ["with-diesel"] }
 ya-core-model = { version = "^0.5", features = [ "activity", "driver", "identity", "market", "payment" ] }
-ya-net = "0.2"
+ya-net = {version = "0.2" }
 ya-metrics = "0.1.0"
 ya-persistence = "0.2"
 ya-service-api = "0.1"
@@ -50,7 +50,7 @@ ya-client = "0.5"
 ya-dummy-driver = "0.2"
 ya-erc20-driver = "0.3"
 ya-zksync-driver = "0.2"
-ya-net = { version = "0.2", features = ["service"] }
+#ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
 
 actix-rt = "1.0"
