--- a/golem_cli/Cargo.toml
+++ b/golem_cli/Cargo.toml
@@ -38,6 +38,7 @@ strum = "0.20.0"
 strum_macros = "0.20.0"
 tokio = { version = "0.2", features = ["process", "rt-core", "signal", "time", "io-util", "io-std"] }
 url = "2.1"
+ureq = { version = "2.4.0", features = ["json"] }
 
 [target.'cfg(target_family = "unix")'.dependencies]
 libc="0.2.73"
