--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -13,7 +13,9 @@ hybrid-net = []
 [dependencies]
 ya-core-model = { version = "^0.6", features=["net", "identity"] }
 
-ya-relay-client = "0.2"
+# ya-relay-client = "0.2"
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "77b6416fe1be0a4bb341754660217fa3baee1f5b" }
+ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "77b6416fe1be0a4bb341754660217fa3baee1f5b" }
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
