--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = ["dns"]
 dns = ["anyhow",  "url", "trust-dns-resolver/mdns"]
-vpn = ["ya-net-stack", "ipnet", "thiserror"]
+vpn = ["ya-relay-stack", "ipnet", "thiserror"]
 
 [dependencies]
 futures = "0.3"
@@ -19,6 +19,6 @@ anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.19", optional = true }
 url = { version = "2.2", optional = true }
 
-ya-net-stack = { git = "https://github.com/golemfactory/ya-relay.git", branch = "mf/inet", optional = true }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", branch = "mf/outbound-inet", optional = true }
 ipnet = { version = "2.3", optional = true }
 thiserror = { version = "1.0", optional = true }
