--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -13,7 +13,8 @@ name = "ya-provider"
 path = "src/main.rs"
 
 [dependencies]
-ya-agreement-utils = { version = "^0.4", features = ["manifest"] }
+ya-agreement-utils = { version = "^0.4" }
+ya-manifest-utils = { version = "^0.1" }
 ya-client = { version = "0.6", features = ['cli'] }
 ya-client-model = "0.4"
 ya-compile-time-utils = "0.2"
